--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -31,12 +31,12 @@
   <nav>
     <ul class="navigation">
       <li><a id="menu-button" href="#" onclick="toggleMenu()">Menu</a></li>
-      <li><a href="#">Home</a> </li>
-      <li><a href="../lesson6/preston-6.html">Preston</a></li>
-      <li><a href="#">Soda Springs</a></li>
-      <li><a href="#">Fish Haven</a></li>
+      <li><a href="index.html">Home</a> </li>
+      <li><a href="preston.html">Preston</a></li>
+      <li><a href="sodasprings.html">Soda Springs</a></li>
+      <li><a href="fishhaven.html">Fish Haven</a></li>
       <li><a class="active" href="stormcenter.html">Storm Center</a></li>
-      <li><a href="../lesson7/gallery-7.html">Gallery</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
     </ul>
   </nav>  
 
